# v1-client

./: .gitignore  .gitmodules  BrewResolver.cmake  CMakeLists.txt  Copyright.txt  FixAppleArchitecture.cmake  Packaging_DMGSetup.scpt  README.md  assets.qrc  build.sh  build_osx.sh  package.json  resources.qrc  settings.json  vcpkg.json
.github/workflows/: build.yml  build_cmake.yml  macos.yml  ubuntu.yml  windows.yml
cmake/modules/: FindNodeJS.cmake
i18n/: DigitalStage_de.qm  DigitalStage_de.ts
images/mac/: icon.icns  info.plist
src/: DigitalStage_de.ts  DigitalStage_en_150.ts  app.cpp  app.h  ds-client_en_150.ts  login.ui  logindialog.cpp  logindialog.h  logindialog.ui  loginpane.cpp  loginpane.h  loginpane.ui  loginpanel.cpp  loginpanel.h  loginpanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/api/: auth.cpp  auth.h  keystore.cpp  keystore.h
src/ds-client/: CMakeLists.txt  ds-client_en_150.ts  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h
src/helper/: filedownloader.cpp  filedownloader.h
src/ov/: ov_controller.cpp  ov_controller.h  ov_worker.cpp  ov_worker.h
webmixer/: index.js  make.js  package.json  webmixer.js
webmixer-2/: .eslintrc.js  package.json  tsconfig.json
webmixer-2/.next/: BUILD_ID  prerender-manifest.json  required-server-files.json
webmixer-2/.next/server/: pages-manifest.json
webmixer-2/.next/server/pages/: 404.html  500.html  _app.js  _document.js  index.html
webmixer-2/.next/server/pages/api/: rec.js  socket.js
webmixer-2/.next/static/PYmXFFsRq1OedFYV7UKo1/: _buildManifest.js
webmixer-2/.next/static/chunks/: main-556a2def9fc577698b1c.js  webpack.js
webmixer-2/.next/static/chunks/pages/: _app-331455ff0529b9adb9fd.js  _app.js  index-f8885630102258fa0a6e.js  index.js
webmixer-2/.next/static/webpack/pages/: index.38f208dcf9a91aee231d.hot-update.js  index.7d7fb394fb91e5bfdf87.hot-update.js  index.984ad91e269b74ac8f8c.hot-update.js  index.ebd188d761742cfb6a4a.hot-update.js  index.f3c630d3ea55d4c7ef41.hot-update.js  index.fda7f4d62443b346a7ad.hot-update.js
webmixer-2/pages/: index.tsx
webmixer-2/pages/api/: rec.ts  socket.ts
webmixer-2/src/: index.ts
